fix: uniqueness of service and user in the subscriptions table
